plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'com.github.node-gradle.node' version '4.0.0'
	id "org.sonarqube" version "5.0.0.4638"
	id 'jacoco'
}

group = 'com.msgs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.238'
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.5.RELEASE'
	implementation 'org.json:json:20230227'

	implementation 'com.vladmihalcea:hibernate-types-60:2.20.0'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-config'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'


	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	
	implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'


//  NCP SMS API
	// implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	// implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
	// annotationProcessor 'org.projectlombok:lombok'
	// implementation 'com.google.code.gson:gson:2.8.5'
	implementation group: 'net.sf.json-lib', name: 'json-lib', version: '2.4', classifier: 'jdk15'
	implementation 'com.google.code.gson:gson:2.8.7'

	// chat bot
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework:spring-messaging:5.3.9'
}

jacoco {
	toolVersion = "0.8.8"
	// reportsDir = file("$buildDir/customJacocoReportDir")
}

jacocoTestReport {
	reports {
		xml {
			enabled false
		}
		csv {
				enabled false
		}
		html {
			enabled true
		}

		xml.destination file(project.layout.buildDirectory.dir("jacoco/index.xml")) as File
		csv.destination file(project.layout.buildDirectory.dir("jacoco/index.csv")) as File
		html.destination file(project.layout.buildDirectory.dir("jacoco/index.html")) as File
	}
	getClassDirectories().setFrom(
			files(classDirectories.files.collect {
				fileTree(
						dir: it,
						exclude: [
								'**/Application.class',
								'**/dto/*.class',
								'**/vo/*.class'
						]
				)
			}
			)
	)
	finalizedBy 'jacocoTestCoverageVerification'
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			enabled = true
			element = 'CLASS'

			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.00
			}

			limit {
				counter = 'METHOD'
				value = 'COVEREDRATIO'
				minimum = 0.00
			}
		}
	}
}

test {
	useJUnitPlatform()
	finalizedBy 'jacocoTestReport'
}

def frontendDir = "$projectDir/src/main/webapp"

sourceSets {
	main {
		resources {
			srcDirs = ["$projectDir/src/main/resources"]
		}
	}
}

processResources {
	dependsOn "copyReactBuildFiles"
}

task installReact(type: Exec) {
	workingDir "$frontendDir"
	inputs.dir "$frontendDir"
	group = BasePlugin.BUILD_GROUP
	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
		commandLine "npm.cmd", "audit", "fix"
		commandLine 'npm.cmd', 'install', "--legacy-peer-deps"
	} else {
		commandLine "npm", "audit", "fix"
		commandLine 'npm', 'install', "--legacy-peer-deps"
	}
}

task buildReact(type: Exec) {
	dependsOn "installReact"
	workingDir "$frontendDir"
	inputs.dir "$frontendDir"
	group = BasePlugin.BUILD_GROUP
	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
		commandLine "npm.cmd", "run-script", "build"
	} else {
		commandLine "npm", "run-script", "build"
	}
}

task copyReactBuildFiles(type: Copy) {
	dependsOn "buildReact"
	from "$frontendDir/build"
	into "$buildDir/resources/main/static"
}